fix color contrast

--- a/themes/casBlog/assets/scss/base/block/_card.scss
+++ b/themes/casBlog/assets/scss/base/block/_card.scss
@@ -34,7 +34,7 @@
         padding: rem-calc(0 5);
         margin: 0 -5px 1rem;
         border-radius: $global-radius;
-        color: $ui-gray;
+        color: $medium-gray;
     }
     .img-wrapper {
         display: flex;
